crucible-syntax/test-data/simulator-tests/float-cast.out.good
==== Begin Simulation ====
floatToBinary ca@0:f
ca@0:f
floatFromBinary cx@2:bv
floatToBinary (floatFromBinary cx@2:bv)
floatToBV RNE ca@0:f
floatToSBV RNE ca@0:f

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulator-tests/float-cast.cbl:20:5: error: in main
  bad unsigned round trip
  eq ca@0:f (bvToFloat RNE (floatToBV RNE ca@0:f))
COUNTEREXAMPLE

Prove:
  test-data/simulator-tests/float-cast.cbl:24:5: error: in main
  bad signed round trip
  eq ca@0:f (sbvToFloat RNE (floatToSBV RNE ca@0:f))
COUNTEREXAMPLE
